# qwazzock

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonapp.yml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  socket.data.json  socket.meta.json  socketserver.data.json  socketserver.meta.json  ssl.data.json  ssl.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  test_init.data.json  test_init.meta.json  threading.data.json  threading.meta.json  time.data.json  time.meta.json  (+8 more)
.mypy_cache/3.8/click/: __init__.data.json  __init__.meta.json  _termui_impl.data.json  _termui_impl.meta.json  core.data.json  core.meta.json  decorators.data.json  decorators.meta.json  exceptions.data.json  exceptions.meta.json  formatting.data.json  formatting.meta.json  globals.data.json  globals.meta.json  (+10 more)
qwazzock/: __init__.py  game.py  logs.py  server.py
qwazzock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qwazzock/templates/: admin.html  base.html  host_client.html  player_client.html
tests/: test_game.py  test_init.py  test_server.py
(+178 files in other folders)
