[tool.poetry]
name = "qwazzock"
version = "0.12.0"
description = "An app for hosting interactive quizzes."
authors = ["Dave Randall <19395688+daveygit2050@users.noreply.github.com>", "Iain Rawson <30925288+iainrawson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-socketio = "^4.2.1"
pyopenssl = "^19.1.0"
eventlet = "^0.25.2"

[tool.poetry.dev-dependencies]
reorder-python-imports = "^2.2.0"
safety = "^1.8.7"
pytest-mock = "^3.1.0"
pytest-cov = "^2.8.1"
bandit = "^1.6.2"
pytest = "^5.4.1"
pytest-codestyle = "^2.0.1"
pycodestyle = "^2.5.0"
pytest-black = "^0.3.8"
pre-commit = "^2.2.0"

[tool.poetry.scripts]
qwazzock = 'qwazzock:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
